Fixed fade in and out animations, overflow of the main container

--- a/fade.css
+++ b/fade.css
@@ -1,6 +1,6 @@
 .box {
     transform: translateX(200%);
-    transition: transform 0.9s ease-in-out;
+    transition: transform 0.7s ease-in-out;
 }
 
 .box:nth-of-type(even) {
