--- a/home.css
+++ b/home.css
@@ -25,6 +25,8 @@ body {
 .container {
   color: #413F42;
   position: relative;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .description {
@@ -55,6 +57,10 @@ li.nav-item {
 
 li.nav-item:last-child {
   padding-right: 0;
+}
+
+.scroll-down {
+  transform: translateY(200%);
 }
 
 @media only screen and (max-width: 991px) {
